@@ -1,6 +1,11 @@
 2008-08-28  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libgnome/gnome-program.c: (gnome_program_init_paramv):
+	Revert this since it broke the build.
+
+2008-08-28  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* libgnome/gnome-program.c: (gnome_program_init_paramv):
 	Patch from OpenSUSE to fix uninitialized var. Closes 
 	bug #543570. (Rodrigo Moya)
 
